            - exceptions when no save file exists
            - data fixer results may not be saved correctly
            - exception when world selection screen is empty
            - world selection screen was parsing name incorrectly

        long-term issues:
            - rendering helper was miss-doing some stuff
            - debug world was displaying some block states more than one time

changelog of snapshot 20w25a released on 18.06.2020 (theme: data fixers and API improvements)
    Rendering:
        - added state part serializer for progress bar
        - generation screens
        - implemented world list with selection. Moved world name enter into world generation settings screen
        - added UI element for scroll bars

    Saves:
        - rewritten data fixer system. Incompatible with old one. Old stuff still arrival, but deprecated
        - old worlds are still load-able as data-fixers were ported

    Console:
        - improved loading
        - changed some logging systems

    Commands:
        - added /shuffledata command for shuffling recipes & loot table outputs with other ones
            (must be activated in config files)

    Modding:
        - added data gen system for textures
        - changed order of loading stages to be more functional

    Loot tables:
        - implemented two new loot table conditions: minecraft:block_state_property and minecraft:damage_source_properties

    Entity API:
        - added DamageSource class

    fixed issues:
        long-term issues:
            - crafting output slot was added to inventory
            - loading bars of mod loading where not in the middle
            - % in world gen / load screen was calculated wrong leading into negative %
            - crafting slot could get saved when closing the game

        since last snapshot:
            - generator for recipe generator was not parsing output correctly leading into errors in the recipes

