@@ -1188,3 +1188,4 @@ sstarted these clone on 12th of July, 2019
 [uuk]: fixed world name selection issue (issue 223)
 [uuk]: imrpvoed cases for data generators
 [uuk]: fixed duplicated states in debug world (issue 224)
+[uuk]: fixed loading of debug worlds (issue 203)
