@@ -80,6 +80,7 @@ changelog of snapshot [next] (theme: fixing stuff & upgrading base to 1.16)
         long-term issues:
             - rendering helper was miss-doing some stuff
             - debug world was displaying some block states more than one time
+            - exceptions were printed into log when loading an saved debug world
 
 changelog of snapshot 20w25a released on 18.06.2020 (theme: data fixers and API improvements)
     Rendering:
